# pokeapp

./: .env  .gitignore  README.md  docker-compose.yml  package-lock.json
backend/: Dockerfile  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: c65941bbd2e1_add_users_table.py
backend/pokeapp/: app.py  redis_client.py  routes.py  security.py
backend/pokeapp/database/: connection.py
backend/pokeapp/models/: models.py
backend/pokeapp/repository/: respository.py
backend/pokeapp/schemas/: schemas.py
frontend/vue_pokeapp/: README.md  package-lock.json  package.json
frontend/vue_pokeapp/src/: main.js
frontend/vue_pokeapp/src/assets/: main.css
frontend/vue_pokeapp/src/components/: CustomButtonComponent.vue  InputComponent.vue  PaginatorComponent.vue  PokemonSquareComponent.vue
frontend/vue_pokeapp/src/router/: index.js
frontend/vue_pokeapp/src/views/: Home.vue  Login.vue  Register.vue
