[tool.poetry]
name = "pokeapp"
version = "0.1.0"
description = ""
authors = ["filpss <filipepinho2010@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
fastapi = {extras = ["standard"], version = "^0.112.2"}
sqlalchemy = "^2.0.32"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.2"
pwdlib = {extras = ["argon2"], version = "^0.2.1"}

[tool.taskipy.tasks]
run = 'fastapi dev pokeapp/app.py'

[tool.poetry.group.dev.dependencies]
taskipy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
